<resources>
    <string name="app_name">BoredApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">CATEGORY</string>
    <string name="explore">Explore the night life of your city</string>
    <string name="paymentType">Free</string>
    <string name="price">price</string>
    <string name="participants">Participants</string>
    <string name="next">NEXT</string>
    <string name="rangeBar">0.0-1.0</string>
    <string name="accessibility">Accessibility</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="night">night</string>
    <string name="day">day</string>
    <string name="todo">TODO</string>
    <string name="text">Light Mode</string>
    <string name="Settings">settings</string>
    <string name="Category">Category</string>
    <string name="Price">Price</string>

    <array name="rangeBarValue">
        <item>0.10</item>
        <item>0.50</item>
    </array>

    <string-array name="types">
        <item>education</item>
        <item>recreational</item>
        <item>social</item>
        <item>DIY</item>
        <item>charity</item>
        <item>cooking</item>
        <item>relaxation</item>
        <item>music</item>
        <item>busywork</item>

    </string-array>


</resources>